# keriox

./: .gitignore  Cargo.toml  kerid.json
src/: kerid.rs  kli.rs  lib.rs
src/controller/: mod.rs  test.rs
src/daemon/: mod.rs
src/processor/: async_processing.rs  mod.rs  tests.rs
src/signer/: wallet.rs
