[package]
name = "keri"
version = "0.8.1"
authors = ["Web Of Trust", "Decentralized Identity Foundation",
    "Charles Cunningham <charles@jolocom.io>",
    "Ivan Temchenko <ivan@jolocom.io"]
edition = "2021"
description = "A Rust implementation of the Key Event Receipt Infrastructure (KERI) and Authentic Chained Data Containers (ACDC) protocols."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "kerid"
path = "src/kerid.rs"

[[bin]]
name = "kli"
path = "src/kli.rs"

[features]
# lmdb = ["rkv", "bincode"] # deprecated since 0.7
sled-db = ["sled", "fixed"]
async = ["async-std", "pin-project", "futures-core", "bitpat"]
wallet = ["universal_wallet"]
default = ["sled-db"]
query = []

[dependencies]
ed25519-dalek = "1.0.1"
k256 = { version = "0.9", features = ["ecdsa", "sha256", "zeroize"] }
blake2 = "0.9.1"
sha2 = "0.9.3"
sha3 = "0.9.1"
rand = { version = "0.7.3", features = ["std", "getrandom"] }
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.1"
serde_derive = "1.0.106"
thiserror = "1.0"
serde-hex = "0.1"
nom = "5"
itoa = "0.4"
ryu = "1.0"
blake3 = { version = "1", default-features = false }
chrono = { version = "0.4.18", features = ["serde"] }
rmp-serde = "0.15"
arrayref = "0.3.6"
zeroize = "1.3.0"
sled = { version = "0.34.6", optional = true }
fixed = { version = "1.9", optional = true }
fraction = { version = "0.9", features = ["with-serde-support"]}
# Async dependencies
async-std = { version = "1", optional = true }
pin-project = { version = "1", optional = true }
futures-core = { version = "0.3.15", optional = true }
bitpat = { version = "0.1.1", optional = true }
# Wallet dependencies
universal_wallet = { version = "0.5", optional = true}

rkv = { version = "0.17", optional = true }
bincode = { version = "1.3.1", optional = true }
clap = { version = "4.0.15", features = ["derive"] }
text-colorizer = "1.0.0"
log = "0.4.17"
simplelog = { version = "^0.12.0", features = ["paris"] }
url = "2.3.1"
shellexpand = "2.1.2"
actix-web = "4.2.1"

[dev-dependencies]
tempfile = "3.1"
sodiumoxide = "0.2.6"
